@@ -323,7 +323,8 @@ namespace LinuxSampler {
             friend class EngineChannelFactory;
 
         private:
-            void* pPrivateData;
+            struct private_data_t;
+            private_data_t* const p;
     };
 
 } // namespace LinuxSampler
